--- a/index.html
+++ b/index.html
@@ -23,14 +23,8 @@
     <div class="column" id="column">
 
       <header>
-        <h1>Roster calendar</h1>
+        <h1>Calendar - 5 / 5 / 10 roster</h1>
       </header>
-
-      <section>
-        <p>
-
-        </p>
-      </section>
       
       <section id="calendar">
           <table>
@@ -59,7 +53,7 @@
               <td colspan=7>
               <p>
                 <button id="previous" onclick="previousMonth()">Previous month</button>
-                <button id="change" onclick="changeRoster()">Different roster (+5 days)</button>
+                <button id="change" onclick="changeRoster()">Different crew (+5 days)</button>
                 <button id="next" onclick="nextMonth()">Next month</button>
               </p>
 
