--- a/index.html
+++ b/index.html
@@ -17,11 +17,6 @@
 
 <body>
 
-  <div class="container">
-
-
-    <div class="column" id="column">
-
       <header>
         <h1>Calendar - 5 / 5 / 10 roster</h1>
       </header>
@@ -53,7 +48,7 @@
               <td colspan=7>
               <p>
                 <button id="previous" onclick="previousMonth()">Previous month</button>
-                <button id="change" onclick="changeRoster()">Different crew (+5 days)</button>
+                <button id="change" onclick="changeRoster()">Change crew </button>
                 <button id="next" onclick="nextMonth()">Next month</button>
               </p>
 
@@ -61,9 +56,10 @@
             </tr>
             <tr>
               <td></td></td><td colspan=2 class="dayshift">Day shift</td>
-              <td></td>
+              <td><span id="crew"></span></td>
               <td colspan=2 class="nightshift">Night shift</td><td></td>
             </tr>
+            <tr><td colspan=7>&nbsp</td></tr>
           </tbody>
         </table>
   
@@ -72,11 +68,6 @@
       </section>
 
 
-
-
-    </div>
-
-  </div>
 
   <footer>
     Created by <strong>Robert Grzazek.</strong>
