--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
               <tr>
                 <td colspan=7>
                   <span id="monthAndYear"></span>
-                
                 </td>
               </tr>
               <tr>
@@ -55,9 +54,11 @@
               </td>
             </tr>
             <tr>
-              <td></td></td><td colspan=2 class="dayshift">Day shift</td>
+              <td></td>
+              <td colspan=2 class="dayshift">Day shift</td>
               <td><span id="crew"></span></td>
-              <td colspan=2 class="nightshift">Night shift</td><td></td>
+              <td colspan=2 class="nightshift">Night shift</td>
+              <td></td>
             </tr>
             <tr><td colspan=7>&nbsp</td></tr>
           </tbody>
